# FastMath

./: .gitignore  CMakeLists.txt  README.md
include/: gemm.hpp  matrix.hpp  tensor.hpp  utils.hpp
src/algorithms/: CMakeLists.txt  gemm.cpp  gemm_naive.cpp
src/experiments/experiment_1/: CMakeLists.txt  README.md  main.cpp
src/utils/: CMakeLists.txt  utils.cpp
tests/algorithm_tests/: CMakeLists.txt  gemm_tests.cpp
tests/matrix_tests/: CMakeLists.txt  matrix_tests.cpp
tests/tensor_tests/: CMakeLists.txt  tensor_tests.cpp
